--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Basic Website</title>
+    <title>Elypso engine</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Elypso engine website lol</h1>
-        <p>I'm just testing how this works...'</p>
+        <h1>Elypso engine</h1>
+        <p>test test test</p>
     </div>
 </body>
 </html>
