--- a/index.html
+++ b/index.html
@@ -3,34 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elypso engine</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #666;
-        }
-    </style>
+    <title>Background Image with Text and Button</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Elypso engine</h1>
-        <p>test test test</p>
+        <div class="content">
+            <h1>Welcome to My Website</h1>
+            <p>Some descriptive text about your website.</p>
+            <button>Learn More</button>
+        </div>
     </div>
 </body>
 </html>
