download button, website icon, restructure

--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Image with Text and Button</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Elypso engine</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="images/icon.ico">
 </head>
 <body>
     <div class="container">
         <div class="content">
-            <h1>Welcome to My Website</h1>
-            <p>Some descriptive text about your website.</p>
-            <button>Learn More</button>
+            <h1>Welcome to the Elypso engine website!</h1>
+            <p>Download Elypso Engine 0.0.13</p>
+            <button id="btn_DownloadEngine">Download</button>
         </div>
     </div>
+    <script src="assets/js/download.js"></script>
 </body>
 </html>
