add top and bottom overlays

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 </head>
 <body>
-    <div class="container">
-        <div class="content">
+    <div class="background"></div>
+    <div class="overlay">
+        <div class="overlay-content">
             <h1>Welcome to the Elypso engine website!</h1>
             <p>Download Elypso Engine 0.0.13</p>
             <button id="btn_DownloadEngine">Download</button>
         </div>
+    </div>
+    <div class="bottom-overlay">
+        <div class="bottom-overlay-copyright">
+            <p>Lost Empire Entertainment © 2024</p>
+        </div>
+        <div class="bottom-overlay-icon-discord"></div>
     </div>
     <script src="assets/js/download.js"></script>
 </body>
