--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="bottom-overlay">
         <div class="bottom-overlay-copyright">
-            <p>Lost Empire Entertainment © 2024</p>
+            <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <div class="bottom-overlay-icon-discord"></div>
     </div>
