testing without bottom copyright and logo

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
             <button id="btn_DownloadEngine">Download</button>
         </div>
     </div>
-    <div class="bottom-overlay">
-        <div class="bottom-overlay-copyright">
-            <p>© 2023-2024 Lost Empire Entertainment</p>
-        </div>
-        <div class="bottom-overlay-icon-discord"></div>
-    </div>
+    <div class="bottom-overlay"></div>
     <script src="assets/js/download.js"></script>
 </body>
 </html>
