--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>
     </div>
     <div class="bottom-overlay">
-        <div class="bottom-overlay-icon-discord"></div>
+        <div class="bottom-overlay-copyright">
+            <p>© 2023-2024 Lost Empire Entertainment</p>
+        </div>
     </div>
     <script src="assets/js/download.js"></script>
 </body>
