try fix to allow including both copyright and logo

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
+        <div class="bottom-overlay-icon-discord"></div>
     </div>
     <script src="assets/js/download.js"></script>
 </body>
