--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
-        <div class="bottom-overlay-icon-discord"></div>
+        <img src="images/discord-icon.png" alt="Image" class="bottom-overlay-icon-discord"/>
     </div>
     <script src="assets/js/download.js"></script>
 </body>
