--- a/index.html
+++ b/index.html
@@ -10,17 +10,27 @@
 <body>
     <div class="overlay">
         <div class="overlay-content">
-            <h1>Welcome to the Elypso engine website!</h1>
-            <p>Download Elypso Engine 0.0.13</p>
-            <button id="btn_DownloadEngine">Download</button>
+            <h1 style="font-family: Arial, sans-serif; 
+                font-weight: bold;">FREE AND OPEN SOURCE GAME ENGINE
+            </h1>
+            <p>Develop your games in this node based engine!</p>
+            <button id="btn_DownloadEngine">Download 0.0.13</button>
         </div>
     </div>
     <div class="bottom-overlay">
         <div class="bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
-        <img src="images/discord-icon.png" alt="Image" class="bottom-overlay-icon-discord"/>
+        <a href="https://discord.gg/wPYCSSenX2" target="_blank">
+            <img src="images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
+        </a>
+        <a href="https://www.youtube.com/@Greenlaser" target="_blank">
+            <img src="images/youtube-icon.png" alt="Image" class="buttom-overlay-icon-youtube" />
+        </a>
+        <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
+            <img src="images/github-icon.png" alt="Image" class="buttom-overlay-icon-github" />
+        </a>
     </div>
-    <script src="assets/js/download.js"></script>
+    <script src="assets/js/links.js"></script>
 </body>
 </html>
