website under construction

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <div class="bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
+        <div class="bottom-overlay-website-under-construction">
+            <p>WEBSITE UNDER CONSTRUCTION, DOCUMENTATION COMING SOON</p>
+        </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
             <img src="images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
         </a>
