website under construction

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <div class="overlay">
         <div class="overlay-content">
-            <h1 style="font-family: Arial, sans-serif; 
-                font-weight: bold;">FREE AND OPEN SOURCE GAME ENGINE
+            <h1 style="font-family: Arial, sans-serif;
+                font-weight: bold;">
+                FREE AND OPEN SOURCE GAME ENGINE
             </h1>
-            <p>Develop your games in this node based engine!</p>
+            <br />
+            <p>Website under construction! More updates and engine documentation coming soon!</p>
+            <br />
             <button id="btn_DownloadEngine">Download 0.0.13</button>
         </div>
     </div>
     <div class="bottom-overlay">
         <div class="bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
-        </div>
-        <div class="bottom-overlay-website-under-construction">
-            <p>WEBSITE UNDER CONSTRUCTION, DOCUMENTATION COMING SOON</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
             <img src="images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
