added older versions page

--- a/older_versions.html
+++ b/older_versions.html
@@ -3,37 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elypso engine</title>
-    <link rel="stylesheet" href="assets/css/homepage.css"/>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+    <title>Elypso Engine older versions</title>
+    <link rel="stylesheet" href="assets/css/homepage.css" />
+    <link rel="stylesheet" href="assets/css/older_versions.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body>
-    <div class="overlay">
+    <div class="center-overlay">
         <div class="overlay-content">
-            <h1 style="font-family: Arial, sans-serif;
-                font-weight: bold;">
-                FREE AND OPEN SOURCE GAME ENGINE
-            </h1>
-            <p>Website under construction! More updates and engine documentation coming soon!</p>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <p>Get the latest version: 0.0.13 Prototype</p>
-            <button id="btn_DownloadEngine">Download</button>
-            <br />
-            <p>
-                Looking for <a href="older_versions.html"><u>older versions</u></a>?
-            </p>
+            <div class="older-versions-overlay">
+                <div class="version-text">
+                    <h1 style="font-family: Arial, sans-serif;
+                        font-weight: bold;">
+                        0.0.12
+                    </h1>
+                </div>
+                <br />
+                <br />
+                <br />
+                <button id="btn_Download0-0-12">Download</button>
+            </div>
         </div>
     </div>
 
     <div class="bottom-overlay">
         <div class="bottom-overlay-copyright">
-            <p>Â© 2023-2024 Lost Empire Entertainment</p>
+            <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
             <img src="images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
