trying out two ways to open as link

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <p>Get the latest version: 0.0.13 Prototype</p>
             <button id="btn_DownloadEngine">Download</button>
             <br />
+            <a href="pages/older_versions.html" target="_self">Link to older versions</a>
             <p>
-                Looking for <a href="older_versions.html"><u>older versions</u></a>?
+                Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?
             </p>
         </div>
     </div>
