--- a/pages/older_versions.html
+++ b/pages/older_versions.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elypso Engine older versions</title>
-    <link rel="stylesheet" href="assets/css/homepage.css" />
-    <link rel="stylesheet" href="assets/css/older_versions.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="../assets/css/homepage.css" />
+    <link rel="stylesheet" href="../assets/css/older_versions.css" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
 </head>
 <body>
     <div class="center-overlay">
@@ -31,15 +31,15 @@
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
-            <img src="images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
+            <img src="../images/discord-icon.png" alt="Image" class="buttom-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
-            <img src="images/youtube-icon.png" alt="Image" class="buttom-overlay-icon-youtube" />
+            <img src="../images/youtube-icon.png" alt="Image" class="buttom-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="images/github-icon.png" alt="Image" class="buttom-overlay-icon-github" />
+            <img src="../images/github-icon.png" alt="Image" class="buttom-overlay-icon-github" />
         </a>
     </div>
-    <script src="assets/js/links.js"></script>
+    <script src="../assets/js/links.js"></script>
 </body>
 </html>
