--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Get the latest version: 0.0.13 Prototype</p>
             <button id="btn_DownloadEngine">Download</button>
             <br />
-            <a href="pages/older_versions.html" target="_self">Link to older versions</a>
+            <a href="pages/older_versions.html">1234</a>
             <p>
                 Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?
             </p>
