--- a/pages/older_versions.html
+++ b/pages/older_versions.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elypso engine</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/homepage.css"/>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+    <title>Older versions</title>
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/older_versions.css" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
 </head>
 <body>
     <!-- displays the very top overlay with navigation buttons -->
     <div class="-top-overlay">
         <div class="-top-overlay-btn1">
+            <button id="btn_Home">Home</button>
+        </div>
+        <div class="-top-overlay-btn2">
             <button id="btn_Docs">Documentation</button>
         </div>
     </div>
 
-    <!-- displays the homepage title overlay -->
-    <div class="hp-main-overlay">
+    <!-- displays the title overlay with page title -->
+    <div class="-title-overlay">
         <div class="-overlay-content">
             <h1 style="font-family: Arial, sans-serif;
                 font-weight: bold;">
-                FREE AND OPEN SOURCE GAME ENGINE
+                OLDER VERSIONS
             </h1>
-            <p>Website under construction! More updates and engine documentation coming soon!</p>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <p>Get the latest version: 0.0.13 Prototype</p>
-            <button id="btn_DownloadEngine">Download</button>
-            <p>Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?</p>
+        </div>
+    </div>
+
+    <!-- displays the main overlay with the actual downloads -->
+    <div class="ov-main-overlay">
+        <div class="ov-version">
+
         </div>
     </div>
 
@@ -42,18 +42,18 @@
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
-            <img src="images/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
+            <img src="../images/discord-icon.png" alt="Image" class="-buttom-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
-            <img src="images/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
+            <img src="../images/youtube-icon.png" alt="Image" class="-buttom-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="images/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
+            <img src="../images/github-icon.png" alt="Image" class="-buttom-overlay-icon-github" />
         </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com">Website source code</a>
         </div>
     </div>
-    <script src="assets/js/links.js"></script>
+    <script src="../assets/js/links.js"></script>
 </body>
 </html>
