fixing broken links and pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 font-weight: bold;">
                 FREE AND OPEN SOURCE GAME ENGINE
             </h1>
-            <p>Website under construction! More updates and engine documentation coming soon!</p>
+            <p>Website under construction!</p>
             <br />
             <br />
             <br />
@@ -32,7 +32,9 @@
             <br />
             <p>Get the latest version: 0.0.13 Prototype</p>
             <button id="btn_DownloadEngine">Download</button>
-            <p>Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?</p>
+            <p>
+                Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?
+            </p>
         </div>
     </div>
 
@@ -51,7 +53,9 @@
             <img src="images/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
         </a>
         <div class="-website-source">
-            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com">Website source code</a>
+            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
+                Website source code
+            </a>
         </div>
     </div>
     <script src="assets/js/links.js"></script>
