--- a/pages/older_versions.html
+++ b/pages/older_versions.html
@@ -26,6 +26,8 @@
                 font-weight: bold;">
                 OLDER VERSIONS
             </h1>
+            <p>Website under construction!</p>
+            <p>This page lists direct downloads to all previously released versions of the engine.</p>
         </div>
     </div>
 
@@ -42,16 +44,18 @@
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
-            <img src="../images/discord-icon.png" alt="Image" class="-buttom-overlay-icon-discord" />
+            <img src="../images/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
-            <img src="../images/youtube-icon.png" alt="Image" class="-buttom-overlay-icon-youtube" />
+            <img src="../images/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="../images/github-icon.png" alt="Image" class="-buttom-overlay-icon-github" />
+            <img src="../images/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
         </a>
         <div class="-website-source">
-            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com">Website source code</a>
+            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
+                Website source code
+            </a>
         </div>
     </div>
     <script src="../assets/js/links.js"></script>
