--- a/pages/docs.html
+++ b/pages/docs.html
@@ -23,25 +23,29 @@
                 font-weight: bold;">
                 DOCUMENTATION
             </h1>
+            <br />
+            <p>Website under construction!</p>
         </div>
     </div>
 
     <!-- displays the bottom overlay with links and copyright -->
     <div class="-bottom-overlay">
         <div class="-bottom-overlay-copyright">
-            <p>© 2023-2024 Lost Empire Entertainment</p>
+            <p>Â© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
-            <img src="../images/discord-icon.png" alt="Image" class="-buttom-overlay-icon-discord" />
+            <img src="../images/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
-            <img src="../images/youtube-icon.png" alt="Image" class="-buttom-overlay-icon-youtube" />
+            <img src="../images/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="../images/github-icon.png" alt="Image" class="-buttom-overlay-icon-github" />
+            <img src="../images/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
         </a>
         <div class="-website-source">
-            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com">Website source code</a>
+            <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
+                Website source code
+            </a>
         </div>
     </div>
     <script src="../assets/js/links.js"></script>
