moved third party images to new folder

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/wPYCSSenX2" target="_blank">
-            <img src="images/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
+            <img src="images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
-            <img src="images/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
+            <img src="images/third-party/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="images/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
+            <img src="images/third-party/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
         </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
