Revert "Update docs.html"
This reverts commit eafaca4ce7075eff2c641ec68a09b601073d35ea.

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -33,6 +33,9 @@
         <div class="-bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
+        <a href="https://discord.gg/wPYCSSenX2" target="_blank">
+            <img src="../images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
+        </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
             <img src="../images/third-party/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
