--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="-bottom-overlay-copyright">
             <p>© 2023-2024 Lost Empire Entertainment</p>
         </div>
-        <a href="https://discord.gg/wPYCSSenX2" target="_blank">
+        <a href="https://discord.gg/FqJgy2SvDs" target="_blank">
             <img src="images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
         <a href="https://www.youtube.com/@Greenlaser" target="_blank">
