added paypal download link

--- a/index.html
+++ b/index.html
@@ -41,16 +41,19 @@
     <!-- displays the bottom overlay with links and copyright -->
     <div class="-bottom-overlay">
         <div class="-bottom-overlay-copyright">
-            <p>© 2023-2024 Lost Empire Entertainment</p>
+            <p>Copyright(C) 2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/FqJgy2SvDs" target="_blank">
             <img src="images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
-        <a href="https://www.youtube.com/@Greenlaser" target="_blank">
+        <a href="https://youtube.com/greenlaser" target="_blank">
             <img src="images/third-party/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
             <img src="images/third-party/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
+        </a>
+        <a href="https://www.paypal.com/donate/?hosted_button_id=QWG8SAYX5TTP6" target="_blank">
+            <img src="images/third-party/paypal-icon.png" alt="Image" class="-button-overlay-icon-paypal" />
         </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
