pages are scrollable, added tutorials page

--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -4,40 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elypso engine</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/homepage.css"/>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/homepage.css" />
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
 </head>
 <body>
     <!-- displays the very top overlay with navigation buttons -->
     <div class="-top-overlay">
         <div class="-top-overlay-btn1">
-            <button id="btn_Docs">Documentation</button>
-        </div>
-        <div class="-top-overlay-btn2">
-            <button id="btn_Tutorials">Tutorials</button>
+            <button id="btn_Home">Home</button>
         </div>
     </div>
 
-    <!-- displays the homepage title overlay -->
-    <div class="hp-main-overlay">
+    <!-- displays the title overlay with page title -->
+    <div class="-title-overlay">
         <div class="-overlay-content">
             <h1 style="font-family: Arial, sans-serif;
                 font-weight: bold;">
-                FREE AND OPEN SOURCE GAME ENGINE
+                TUTORIALS
             </h1>
+            <br />
             <p>Website under construction!</p>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <p>Get the latest version: 0.0.14 Prototype</p>
-            <button id="btn_DownloadEngine">Download</button>
-            <p>
-                Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?
-            </p>
         </div>
     </div>
 
@@ -47,16 +34,16 @@
             <p>Copyright(C) 2024 Lost Empire Entertainment</p>
         </div>
         <a href="https://discord.gg/FqJgy2SvDs" target="_blank">
-            <img src="images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
+            <img src="../images/third-party/discord-icon.png" alt="Image" class="-button-overlay-icon-discord" />
         </a>
         <a href="https://youtube.com/greenlaser" target="_blank">
-            <img src="images/third-party/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
+            <img src="../images/third-party/youtube-icon.png" alt="Image" class="-button-overlay-icon-youtube" />
         </a>
         <a href="https://github.com/Lost-Empire-Entertainment/Elypso-engine" target="_blank">
-            <img src="images/third-party/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
+            <img src="../images/third-party/github-icon.png" alt="Image" class="-button-overlay-icon-github" />
         </a>
         <a href="https://www.paypal.com/donate/?hosted_button_id=QWG8SAYX5TTP6" target="_blank">
-            <img src="images/third-party/paypal-icon.png" alt="Image" class="-button-overlay-icon-paypal" />
+            <img src="../images/third-party/paypal-icon.png" alt="Image" class="-button-overlay-icon-paypal" />
         </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
@@ -64,6 +51,6 @@
             </a>
         </div>
     </div>
-    <script src="assets/js/links.js"></script>
+    <script src="../assets/js/links.js"></script>
 </body>
 </html>
