--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <br />
             <br />
             <br />
-            <p>Get the latest version: 0.0.14 Prototype</p>
+            <p>Get the latest version: 0.1.1 Alpha</p>
             <button id="btn_DownloadEngine">Download</button>
             <p>
                 Looking for <a href="pages/older_versions.html"><u>older versions</u></a>?
