added business email link

--- a/pages/older_versions.html
+++ b/pages/older_versions.html
@@ -55,6 +55,9 @@
         <a href="https://www.paypal.com/donate/?hosted_button_id=QWG8SAYX5TTP6" target="_blank">
             <img src="../images/third-party/paypal-icon.png" alt="Image" class="-button-overlay-icon-paypal" />
         </a>
+        <a href="mailto:sander@elypsoengine.com">
+            <img src="../images/email-icon.png" alt="Image" class="-button-overlay-icon-email" />
+        </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
                 Website source code
