--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <br />
             <br />
             <br />
-            <br />
             <p>Get the latest version: 0.1.1 Alpha</p>
             <button id="btn_DownloadEngine">Download</button>
             <p>
@@ -54,6 +53,9 @@
         </a>
         <a href="https://www.paypal.com/donate/?hosted_button_id=QWG8SAYX5TTP6" target="_blank">
             <img src="images/third-party/paypal-icon.png" alt="Image" class="-button-overlay-icon-paypal" />
+        </a>
+        <a href="mailto:sander@elypsoengine.com">
+            <img src="images/email-icon.png" alt="Image" class="-button-overlay-icon-email" />
         </a>
         <div class="-website-source">
             <a href="https://github.com/Lost-Empire-Entertainment/elypsoengine_dot_com" target="_blank">
